# SEP4IOT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  Dockerfile.microchip  devcontainer.json
.github/scripts/: check_dev_container.sh
.github/workflows/: chk_devcontainer_img.yml  pull_to_Dev.yml  pull_to_DevTesting.yml  pull_to_main.yml  push_to_main.yml
pipeline/: build_firmware_files.sh  config_build_run_test.sh  update_project_pages.sh
proj_pages/: index.html  index.html.template
test/: CMakeLists.txt
test/include/FreeRTOS_defs/: ATMEGA_FreeRTOS.h  FreeRTOS_FFF_MocksDeclaration.h
test/include/fff/: LICENSE  fff.h
test/src/: CMakeLists.txt  hello_test.cpp  temp_test.cpp  test_co2_sensor.cpp  test_controller_receiver.cpp  test_event_group_await_bits.cpp  test_humidity_sensor.cpp  test_queue_ControllerSender_LoRaWAN.cpp  test_temperature_sensor.cpp
